Add high resolution world map

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Visited Places</title>
     <script src="d3/d3.v3.min.js"></script>
     <script src="d3/topojson.v1.min.js"></script>
-    <script src="datamaps/datamaps.world.min.js"></script>
+    <script src="datamaps/datamaps.world.hires.min.js"></script>
 </head>
 <body>
     <h1>Visited Places</h1>
