--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script src="datamaps/datamaps.world.hires.min.js"></script>
 </head>
 <body>
-    <h1>Visited Places</h1>
+    <h1 style="text-align: center">Visited Places</h1>
     <div id="map1" style="position: relative;"></div>
 
     <script src="countries.js"></script>
