--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             highlightOnHover: true,
             popupOnHover: true,
             popupTemplate: function(geo, data) {
-                return "<div class='hoverinfo'>" + data.name + ":<br>" + data.date + "</div>";
+                return "<div class='hoverinfo'>" + data.name + "</div>";
             }
         },
 
